--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
+
 {
   "name": "localstay",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://yashwanth1795.github.io/HACKERTHON",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.2.0",
